# Slicer

./: CMakeLists.txt  SuperBuild.cmake
Base/QTCLI/: CMakeLists.txt  qSlicerCLIModuleUIHelper.cxx  vtkSlicerCLIModuleLogic.cxx
CMake/: FindGit.cmake  SlicerCPackBundleFixup.cmake.in  SlicerConfig.cmake.in  SlicerGenerateSlicerConfig.cmake  SlicerInstallConfig.cmake.in
Extensions/Testing/EditorExtensionTemplate/: EditorExtensionTemplate.py
Libs/: CMakeLists.txt
Libs/IGT/: CMakeLists.txt
Libs/ITKFactoryRegistration/: CMakeLists.txt  itkFactoryRegistration.cxx
Libs/MGHImageIO/: CMakeLists.txt
Libs/MRML/Core/: CMakeLists.txt
Libs/MRML/IDImageIO/: CMakeLists.txt
Libs/RemoteIO/: CMakeLists.txt
Libs/vtkITK/: CMakeLists.txt  vtkITKDistanceTransform.cxx
Libs/vtkITK/Testing/: CMakeLists.txt
Modules/CLI/CurvatureAnisotropicDiffusion/: CurvatureAnisotropicDiffusion.cxx
Modules/CLI/DicomToNrrdConverter/ExtendedTesting/: CMakeLists.txt
Modules/CLI/GradientAnisotropicDiffusion/: GradientAnisotropicDiffusion.cxx
Modules/CLI/ResampleDTIVolume/: itkDiffusionTensor3DWrite.txx
Modules/Loadable/Volumes/Testing/Python/: LoadVolumeDisplaybleSceneModelClose.py
Modules/Scripted/LabelStatistics/: LabelStatistics.py
SuperBuild/: External_ITKv4.cmake  External_SimpleITK.cmake  External_Swig.cmake  SimpleITK_configure_step.cmake.in  SimpleITK_install_step.cmake.in  swig_patch_step.cmake.in
